# draconisplusplus

./: .clang-format  .clang-tidy  .clangd  .envrc  .gitignore  .gitmodules  AGENTS.md  ATTRIBUTIONS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  config.example.hpp  dev-profile-1-link  flake.nix  meson.build  meson.options  nvfetcher.toml  repomix-output.xml  xmake.lua
.claude/: settings.local.json
.github/workflows/: build.yml
.opencode/: opencode.db-shm  opencode.db-wal
_sources/: generated.json  generated.nix
examples/: meson.build
examples/cpp_mcp/: main.cpp
examples/glaze_http/: main.cpp
examples/glaze_http/web/: index.mustache
examples/mcp_server/: main.cpp
examples/switch_app/: main.cpp
examples/vulkan_app/: main.cpp
examples/vulkan_example/: main.cpp
include/: argparse.hpp  ctre.hpp  matchit.h  matchit.hpp  yyjson.h
include/Drac++/Config/: Config.hpp
include/Drac++/Core/: System.hpp
include/Drac++/Services/: PackageCounting.hpp  Packages.hpp  Weather.hpp
include/Drac++/Utils/: ArgumentParser.hpp  CacheManager.hpp  Caching.hpp  DataTypes.hpp  Definitions.hpp  Env.hpp  Error.hpp  Localization.hpp  Logging.hpp  TranslationData.hpp  Types.hpp
include/Drac++/Wrappers/: Curl.hpp  Wayland.hpp
include/DracUtils/: Caching.hpp  Definitions.hpp  Env.hpp  Error.hpp  Formatting.hpp  Logging.hpp  Types.hpp
include/rfl/: AddStructName.hpp  AllOf.hpp  AnyOf.hpp  Attribute.hpp  Box.hpp  Description.hpp  Field.hpp  Flatten.hpp  Literal.hpp  MetaField.hpp  NamedTuple.hpp  NoOptionals.hpp  OneOf.hpp  Pattern.hpp  PatternValidator.hpp  Processors.hpp  Ref.hpp  Rename.hpp  Result.hpp  Size.hpp  Skip.hpp  SnakeCaseToCamelCase.hpp  SnakeCaseToPascalCase.hpp  TaggedUnion.hpp  Timestamp.hpp  Validator.hpp  Variant.hpp  always_false.hpp  as.hpp  comparisons.hpp  default.hpp  define_literal.hpp  define_named_tuple.hpp  define_tagged_union.hpp  define_variant.hpp  enums.hpp  extract_discriminators.hpp  field_names_t.hpp  field_type.hpp  fields.hpp  (+12 more)
include/rfl/bson/: Parser.hpp  Reader.hpp  Writer.hpp  load.hpp  read.hpp  save.hpp  write.hpp
include/rfl/cbor/: Parser.hpp  Reader.hpp  Writer.hpp  load.hpp  read.hpp  save.hpp  write.hpp
include/rfl/flexbuf/: Parser.hpp  Reader.hpp  Writer.hpp  load.hpp  read.hpp  save.hpp  write.hpp
include/rfl/internal/: Array.hpp  Field.hpp  Fields.hpp  Getter.hpp  HasValidation.hpp  Memoization.hpp  Skip.hpp  StringLiteral.hpp  VisitTree.hpp  VisitorWrapper.hpp  all_fields.hpp  bind_fake_object_to_tuple.hpp  bind_to_tuple.hpp  copy_flattened_tuple_to_named_tuple.hpp  copy_from_named_tuple.hpp  copy_from_tuple.hpp  copy_to_field_tuple.hpp  define_literal.hpp  define_named_tuple.hpp  define_tagged_union.hpp  define_variant.hpp  extract_discriminators.hpp  field_type.hpp  find_index.hpp  flattened_ptr_tuple_t.hpp  flattened_tuple_t.hpp  get_fake_object.hpp  get_field_names.hpp  get_meta_fields.hpp  get_type_name.hpp  has_fields.hpp  has_flatten_fields.hpp  has_reflection_method_v.hpp  has_reflection_type_v.hpp  has_tag_v.hpp  has_to_class_method_v.hpp  is_array.hpp  is_attribute.hpp  is_basic_type.hpp  is_description.hpp  (+40 more)
include/rfl/io/: load_bytes.hpp  load_string.hpp  save_bytes.hpp  save_string.hpp
include/rfl/json/: Parser.hpp  Reader.hpp  Writer.hpp  load.hpp  read.hpp  save.hpp  to_schema.hpp  write.hpp
include/rfl/msgpack/: Parser.hpp  Reader.hpp  Writer.hpp  load.hpp  read.hpp  save.hpp  write.hpp
include/rfl/toml/: Parser.hpp  (+6 more)
include/util/: macros.h  numtypes.h  result.h
nix/: default.nix  glibc.nix  module.nix  musl.nix  package.nix  stringzilla.pc.in
src/: main.cpp
src/CLI/: main.cpp  meson.build
src/CLI/Config/: Config.cpp  Config.hpp
src/CLI/Core/: SystemInfo.cpp  SystemInfo.hpp
src/CLI/UI/: AsciiArt.hpp  UI.cpp  UI.hpp
src/Config/: Config.cpp  Config.hpp
src/Core/: SystemData.cpp  SystemData.hpp
src/Lib/: Localization.cpp  meson.build
src/Lib/Config/: Config.cpp
src/Lib/Core/: System.cpp
src/Lib/OS/: BSD.cpp  Haiku.cpp  Linux.cpp  Serenity.cpp  Switch.cpp  Windows.cpp  macOS.cpp
src/Lib/OS/macOS/: Bridge.hpp  Bridge.mm
src/Lib/Services/: PackageCounting.cpp  Packages.cpp
src/Lib/Services/Weather/: DataTransferObjects.hpp  MetNoService.cpp  MetNoService.hpp  OpenMeteoService.cpp  OpenMeteoService.hpp  OpenWeatherMapService.cpp  OpenWeatherMapService.hpp  Weather.cpp  WeatherFactory.cpp  WeatherUtils.cpp  WeatherUtils.hpp
src/Lib/Tests/: CacheManagerTest.cpp  CoreTypesTest.cpp  LoggingUtilsTest.cpp  PackageCountingIntegrationTest.cpp  PackageCountingMockTest.cpp  WeatherServiceTest.cpp  meson.build
src/Lib/Utils/: Caching.hpp
src/Lib/Wrappers/: Curl.hpp  DBus.hpp  Wayland.hpp  XCB.hpp
src/OS/: BSD.cpp  Haiku.cpp  Linux.cpp  OperatingSystem.hpp  Serenity.cpp  Windows.cpp  haiku.cpp  linux.cpp  macOS.cpp  macos.cpp  serenity.cpp
src/Services/: PackageCounting.cpp  PackageCounting.hpp  Weather.hpp
src/UI/: UI.cpp  UI.hpp
src/Util/: Caching.hpp  ConfigData.hpp  Definitions.hpp  Env.hpp  Error.hpp  Logging.hpp  Types.hpp
src/Wrappers/: Curl.hpp  DBus.hpp  Wayland.hpp  XCB.hpp
src/config/: config.cpp  config.h  config.hpp  weather.cpp  weather.h  weather.hpp
src/core/: package.cpp  package.hpp  system_data.cpp  system_data.h  system_data.hpp
src/os/: bsd.cpp  freebsd.cpp  haiku.cpp  linux.cpp  macos.cpp  os.h  os.hpp  serenity.cpp  shared.cpp  windows.cpp
src/ui/: ui.cpp  ui.hpp
src/util/: cache.hpp  defs.hpp  error.hpp  helpers.hpp  logging.hpp  macros.h  result.h  types.h  types.hpp
src/wrappers/: DBus.hpp  Wayland.hpp  XCB.hpp  dbus.hpp  wayland.hpp  xcb.hpp
subprojects/: cpp-mcp.wrap  glaze.wrap  quill.wrap  sqlitecpp.wrap  stringzilla.wrap
subprojects/curl-8.10.1/: .meson-subproject-wrap-hash.txt
subprojects/fmt-11.1.1/: .meson-subproject-wrap-hash.txt
subprojects/fmtlog/: fmtlog.wrap  meson.build
subprojects/quill-4.2.0/: .meson-subproject-wrap-hash.txt  meson.build
subprojects/tomlplusplus-3.4.0/: .meson-subproject-wrap-hash.txt
tests/: .clang-tidy  ConfigTest.cpp  CoreTypesTest.cpp  LoggingUtilsTest.cpp  TestMain.cpp  WeatherServiceTest.cpp
(+162 files in other folders)
